reference: updated svg import to be CSS customizable

--- a/src/stylesheets/navbar.scss
+++ b/src/stylesheets/navbar.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 /* ********* */
 /* NAVBAR    */
 /* ********* */
@@ -7,26 +9,33 @@
 
   /* Desktop */
   @media screen and (min-width: 768px) {
-    min-height: 6em;
+    height: 6em;
     max-width: 65%;
   }
 
   /* Mobile */
   @media screen and (max-width: 769px) {
-    min-height: 3em;
+    height: 3em;
     padding-left: 5%;
     padding-right: 5%;
   }
 
   #brand {
+    fill: $primary;
     /* Desktop */
     @media screen and (min-width: 768px) {
-      max-width: 8em;
+      width: 128px;
     }
 
     /* Mobile */
     @media screen and (max-width: 769px) {
-      max-width: 5em;
+      width: 80px;
+      height: 14px;
     }
+  }
+  #logo {
+    fill: $primary;
+    width: 30px;
+    height: 30px;
   }
 }
