--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -2,5 +2,8 @@
 /* Other variables come here */
 
 $smoke: #f3f2f0;
+$blue: #0096df;
+$primary: $blue;
+$secondary: white;
 
 /* Bulma variables are in bulma.scss files */
