--- a/src/stylesheets/landing.scss
+++ b/src/stylesheets/landing.scss
@@ -1,3 +1,5 @@
+@import './variables.scss';
+
 #landing-title {
   /* Desktop */
   @media screen and (min-width: 768px) {
@@ -13,11 +15,22 @@
 #landing-subtitle {
   /* Desktop */
   @media screen and (min-width: 768px) {
-    font-size: 3em;
+    font-size: 2.5em;
   }
 
   /* Mobile */
   @media screen and (max-width: 769px) {
     font-size: 2em;
+  }
+}
+
+#motivation {
+  background: $smoke;
+  border-radius: 0.5em;
+  margin-bottom: 1em;
+
+  p.citation {
+    margin-bottom: 2em;
+    margin-top: 2em;
   }
 }
