--- a/src/stylesheets/bulma.scss
+++ b/src/stylesheets/bulma.scss
@@ -5,8 +5,19 @@ $primary: $blue;
 
 @import './node_modules/bulma/sass/utilities/_all.sass'; /* → contains variables */
 @import './node_modules/bulma/sass/base/_all.sass';
-@import './node_modules/bulma/sass/components/_all.sass';
-@import './node_modules/bulma/sass/elements/_all.sass';
-@import './node_modules/bulma/sass/form/_all.sass';
-@import './node_modules/bulma/sass/grid/_all.sass';
-@import './node_modules/bulma/sass/layout/_all.sass';
+
+// @import './node_modules/bulma/sass/components/_all.sass';
+@import './node_modules/bulma/sass/components/navbar.sass';
+
+// @import './node_modules/bulma/sass/elements/_all.sass';
+@import './node_modules/bulma/sass/elements/button.sass';
+@import './node_modules/bulma/sass/elements/icon.sass';
+@import './node_modules/bulma/sass/elements/title.sass';
+@import './node_modules/bulma/sass/elements/content.sass';
+@import './node_modules/bulma/sass/elements/container.sass';
+
+// @import './node_modules/bulma/sass/form/_all.sass';
+@import './node_modules/bulma/sass/grid/columns.sass';
+
+// @import './node_modules/bulma/sass/layout/_all.sass';
+@import './node_modules/bulma/sass/layout/section.sass';
