--- a/src/stylesheets/bulma.scss
+++ b/src/stylesheets/bulma.scss
@@ -2,6 +2,10 @@
 
 $blue: #0096df;
 $primary: $blue;
+$red: #ffe8e8;
+$yellow: #fffae2;
+
+
 
 @import './node_modules/bulma/sass/utilities/_all.sass';  /* → contains variables */
 // @import './node_modules/bulma/sass/utilities/animations.sass';
@@ -39,8 +43,8 @@ $primary: $blue;
 // @import './node_modules/bulma/sass/elements/form.sass';
 @import './node_modules/bulma/sass/elements/icon.sass';
 // @import './node_modules/bulma/sass/elements/image.sass';
-// @import './node_modules/bulma/sass/elements/notification.sass';
-// @import './node_modules/bulma/sass/elements/other.sass';
+@import './node_modules/bulma/sass/elements/notification.sass';
+@import './node_modules/bulma/sass/elements/other.sass';
 // @import './node_modules/bulma/sass/elements/progress.sass';
 // @import './node_modules/bulma/sass/elements/table.sass';
 // @import './node_modules/bulma/sass/elements/tag.sass';
