--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -3,5 +3,8 @@
 
 $smoke: #f3f2f0;
 $blue: #0096df;
+$darkred: #df0000; // → Applied as border color with bulma's '$red' (is-danger)
+$gold: #ffbd00;    // → Applied as border color with bulma's '$yellow' (is-warning)
+
 $primary: $blue;
 $secondary: white;
