style: fixed some very minor styling issues

--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -69,6 +69,13 @@
 }
 
 /* ******************** */
+/* COMMON FORMS         */
+/* ******************** */
+input.reasonable-width {
+  max-width: 400px;
+}
+
+/* ******************** */
 /* FONTAWESOME ROTATION */
 /* ******************** */
 .rotating {
