--- a/src/stylesheets/navbar.scss
+++ b/src/stylesheets/navbar.scss
@@ -25,6 +25,7 @@
     /* Desktop */
     @media screen and (min-width: 768px) {
       width: 128px;
+      height: 100%;
     }
 
     /* Mobile */
