feat: added Fontawesome SVG Sprites and GameTabs component
Added sprites (all solid):
- running
- cogs
- code
- sitemap
- trophy
- gifts
- chart-bar

--- a/src/stylesheets/bulma.scss
+++ b/src/stylesheets/bulma.scss
@@ -33,7 +33,7 @@ $yellow: #fffae2;
 @import './node_modules/bulma/sass/components/navbar.sass';
 // @import './node_modules/bulma/sass/components/pagination.sass';
 // @import './node_modules/bulma/sass/components/panel.sass';
-// @import './node_modules/bulma/sass/components/tabs.sass';
+@import './node_modules/bulma/sass/components/tabs.sass';
 
 // @import './node_modules/bulma/sass/elements/_all.sass';
 // @import './node_modules/bulma/sass/elements/box.sass';
