--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -49,12 +49,12 @@
   margin:auto;
 
   /* Desktop */
-  @media screen and (min-width: 768px) {
+  @media screen and (min-width: 1152px) {
     max-width: 65%;
   }
 
   /* Mobile */
-  @media screen and (max-width: 769px) {
+  @media screen and (max-width: 1153px) {
     max-width: 95%;
     padding-top: 1.5rem;
   }
@@ -76,9 +76,27 @@ input.reasonable-width {
 }
 
 /* ******************** */
-/* FONTAWESOME ROTATION */
+/* FONTAWESOME          */
 /* ******************** */
+.fa {
+  width: 1em;
+}
+/* Rotation */
 .rotating {
   animation:spin 3s linear infinite;
 }
 @keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
+
+
+/* ******************** */
+/* SVG                  */
+/* ******************** */
+.fill-primary {
+  fill: $primary;
+  &:hover {
+    fill: $secondary;
+  }
+}
+.fill-secondary {
+  fill: $secondary;
+}
