--- a/src/stylesheets/bulma.scss
+++ b/src/stylesheets/bulma.scss
@@ -32,7 +32,7 @@ $yellow: #fffae2;
 // @import './node_modules/bulma/sass/components/modal.sass';
 @import './node_modules/bulma/sass/components/navbar.sass';
 // @import './node_modules/bulma/sass/components/pagination.sass';
-// @import './node_modules/bulma/sass/components/panel.sass';
+@import './node_modules/bulma/sass/components/panel.sass';
 @import './node_modules/bulma/sass/components/tabs.sass';
 
 // @import './node_modules/bulma/sass/elements/_all.sass';
