--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -68,6 +68,10 @@
   margin-right: 1em;
 }
 
+p.error {
+  color: red;
+}
+
 /* ******************** */
 /* COMMON FORMS         */
 /* ******************** */
