feat: added some FA icons on the left menu (game list)
Harmonized the behavior with GameTabs icons.

--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -104,3 +104,11 @@ input.reasonable-width {
 .fill-secondary {
   fill: $secondary;
 }
+.unselected {
+  fill: $anthracite;
+}
+.is-active {
+  svg {
+    fill: $primary;
+  }
+}
