--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -5,6 +5,7 @@ $smoke: #f3f2f0;
 $blue: #0096df;
 $darkred: #df0000; // → Applied as border color with bulma's '$red' (is-danger)
 $gold: #ffbd00;    // → Applied as border color with bulma's '$yellow' (is-warning)
+$anthracite: #4a4a4a;
 
 $primary: $blue;
 $secondary: white;
