style: added some style to the displayed tabs

--- a/src/stylesheets/bulma-enhancements.scss
+++ b/src/stylesheets/bulma-enhancements.scss
@@ -10,3 +10,11 @@
 .is-warning {
   border: solid 2px $gold;
 }
+
+.panel {
+  background: white;
+}
+
+.navbar {
+  background-color: transparent;
+}
