--- a/src/stylesheets/bulma.scss
+++ b/src/stylesheets/bulma.scss
@@ -36,7 +36,7 @@ $yellow: #fffae2;
 @import './node_modules/bulma/sass/components/tabs.sass';
 
 // @import './node_modules/bulma/sass/elements/_all.sass';
-// @import './node_modules/bulma/sass/elements/box.sass';
+@import './node_modules/bulma/sass/elements/box.sass';
 @import './node_modules/bulma/sass/elements/button.sass';
 @import './node_modules/bulma/sass/elements/container.sass';
 @import './node_modules/bulma/sass/elements/content.sass';
