--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -1,5 +1,13 @@
 @import './variables.scss';
 
+/* ******* */
+/* HTML    */
+/* ******* */
+html#dashboard {
+  height: 100%;
+  background: $smoke;
+}
+
 /* ********* */
 /* CENTERING */
 /* ********* */
