--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -1,7 +1,7 @@
 /* Bulma variables are defined in bulma.scss directly */
 /* Other variables come here */
 
-$smoke: #f3f2f0;
+$smoke: #f6f8fa;
 $blue: #0096df;
 $darkred: #df0000; // → Applied as border color with bulma's '$red' (is-danger)
 $gold: #ffbd00;    // → Applied as border color with bulma's '$yellow' (is-warning)
