feat: Moved Emoji to Twitter Emojis instead of FontAwesome
These are free and very colorful, giving a feeling of "fun".
Some FA icons are still used, sign-in / sign-up / sign-out / external-link-square
but these are more functional icons, not meant to bring some fun!

--- a/src/stylesheets/landing.scss
+++ b/src/stylesheets/landing.scss
@@ -22,6 +22,10 @@
   @media screen and (max-width: 769px) {
     font-size: 2em;
   }
+
+  i,svg {
+    vertical-align: middle;
+  }
 }
 
 #motivation {
@@ -32,5 +36,9 @@
   p.citation {
     margin-bottom: 2em;
     margin-top: 2em;
+  }
+
+  svg {
+    vertical-align: middle;
   }
 }
