--- a/src/stylesheets/bulma.scss
+++ b/src/stylesheets/bulma.scss
@@ -46,7 +46,7 @@ $yellow: #fffae2;
 @import './node_modules/bulma/sass/elements/notification.sass';
 @import './node_modules/bulma/sass/elements/other.sass';
 // @import './node_modules/bulma/sass/elements/progress.sass';
-// @import './node_modules/bulma/sass/elements/table.sass';
+@import './node_modules/bulma/sass/elements/table.sass';
 // @import './node_modules/bulma/sass/elements/tag.sass';
 @import './node_modules/bulma/sass/elements/title.sass';
 
