feat: added Open Sans + RobotoSlab fonts
Open Sans for regular text and RobotoSlab for h1 markups

--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -7,6 +7,12 @@ html#dashboard {
   height: 100%;
   background: $smoke;
 }
+html body {
+  font-family: OpenSans;
+  h1 {
+    font-family: RobotoSlab;
+  }
+}
 
 /* ********* */
 /* CENTERING */
