fix: don't apply hover fill when svg doesn't have a background
Otherwise it becomes white over white.

--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -125,6 +125,14 @@ input.reasonable-width {
 /* ******************** */
 .fill-primary {
   fill: $primary;
+    &:hover {
+      fill: $secondary;
+    }
+}
+.no-hover {
+  &:hover {
+    fill:inherit;
+  }
 }
 .fill-secondary {
   fill: $secondary;
