feat: Massively improved Action tab readiness
By splitting each Action item with a Show and Edit view.

--- a/src/stylesheets/bulma.scss
+++ b/src/stylesheets/bulma.scss
@@ -47,7 +47,7 @@ $yellow: #fffae2;
 @import './node_modules/bulma/sass/elements/other.sass';
 // @import './node_modules/bulma/sass/elements/progress.sass';
 @import './node_modules/bulma/sass/elements/table.sass';
-// @import './node_modules/bulma/sass/elements/tag.sass';
+@import './node_modules/bulma/sass/elements/tag.sass';
 @import './node_modules/bulma/sass/elements/title.sass';
 
 @import './node_modules/bulma/sass/form/_all.sass';
