style: minor styling fixes

--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -89,6 +89,14 @@ p.error {
   color: red;
 }
 
+/* Grayed for optional note */
+span.note {
+  min-height: 17px;
+  margin: 4px 0 2px;
+  font-size: 12px;
+  color: $anthracite_light;
+}
+
 /* ******************** */
 /* COMMON FORMS         */
 /* ******************** */
