--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -6,6 +6,7 @@ $blue: #0096df;
 $darkred: #df0000; // → Applied as border color with bulma's '$red' (is-danger)
 $gold: #ffbd00;    // → Applied as border color with bulma's '$yellow' (is-warning)
 $anthracite: #4a4a4a;
+$anthracite_light: #586069;
 
 $primary: $blue;
 $secondary: white;
