style: big style improvements in Action/Achievement/Resource tabs
- Gets rid off table markups (in forms) 😎, replaced by horizontal forms.
- Adds a nice byproduct-title with svg as icon for Conditions/Rewards/Assets with a background
- Adds a new byproduct-title named 'Properties' for Action/Achievement/Resource properties (with a nice svg icon)
- Moves the Delete button next to Update/Cancel ones, far more explicit than 'x' a top right
- Various styles harmonizations

--- a/src/stylesheets/bulma-enhancements.scss
+++ b/src/stylesheets/bulma-enhancements.scss
@@ -23,6 +23,10 @@
   background-color: transparent !important;
 }
 
+.field-label {
+  flex-basis: 1em !important;
+}
+
 @media screen and (max-width: 768px) {
   .tabs ul {
     flex-direction: column;
