style: added a bunch of svelte transitions when saving game/collections

--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -7,6 +7,7 @@ $darkred: #df0000; // → Applied as border color with bulma's '$red' (is-danger
 $gold: #ffbd00;    // → Applied as border color with bulma's '$yellow' (is-warning)
 $anthracite: #4a4a4a;
 $anthracite_light: #586069;
+$saved: #73c90a;
 
 $primary: $blue;
 $secondary: white;
