--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -95,6 +95,17 @@ p.error {
   color: red;
 }
 
+div.saved-collection {
+  svg {
+    fill: $saved;
+    vertical-align: middle;
+  }
+  max-width: 90%;
+  margin: auto;
+  border: 1px solid $saved;
+  border-radius: 0.2em;
+}
+
 .byproduct-title {
   margin-top: 0.75em !important;
   margin-bottom: 0.75em !important;
