--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -111,6 +111,13 @@ div.saved-collection {
   margin-bottom: 0.75em !important;
   background: $smoke;
   padding: 1em;
+
+  .twemoji {
+    vertical-align: bottom;
+  }
+  span.quantity {
+    font-size: 0.8em;
+  }
 }
 
 /* Grayed for optional note */
@@ -157,6 +164,18 @@ input.count {
   @media screen and (max-width: 768px) {
     margin-bottom: 1em;
   }
+
+  .item-name {
+    margin-top: 0.5em;
+    margin-left: 0.5em;
+    svg.twemoji {
+      margin-right: 0.15em;
+    }
+  }
+  .item-edit {
+    height: 0.7em;
+    margin-left: 0.2em;
+  }
 }
 
 /* ******************** */
@@ -171,6 +190,12 @@ input.count {
 .twemoji {
   width: 1em;
   height: 1em;
+}
+.chevron {
+  cursor: pointer;
+  vertical-align: middle;
+  width: 0.5em;
+  height: 0.5em;
 }
 
 /* Rotation */
