fix: Corrected way of adding new Relation / Conditions to Achievement / Action
Adding one or more conditions to an Achievement did not add them to game.included.
This made them missing and they wouldn't be rendered.
Appending to game.included wasn't sufficient as the old ones had to be removed
(otherwise javascript .find() method stops at first match).

--- a/src/stylesheets/utils.scss
+++ b/src/stylesheets/utils.scss
@@ -120,6 +120,14 @@ div.saved-collection {
   }
 }
 
+.byproduct-title.is-disabled {
+  color: $disabled;
+
+  .chevron {
+    fill: $disabled;
+  }
+}
+
 /* Grayed for optional note */
 span.note {
   min-height: 17px;
@@ -175,6 +183,12 @@ input.count {
   .item-edit {
     height: 0.7em;
     margin-left: 0.2em;
+  }
+
+  .no-conditions {
+    font-style: italic;
+    color: gray;
+    margin: 1em 1em 1em 0.5em; /* top right bottom left */
   }
 }
 
