--- a/src/stylesheets/variables.scss
+++ b/src/stylesheets/variables.scss
@@ -2,6 +2,7 @@
 /* Other variables come here */
 
 $smoke: #f6f8fa;
+$disabled: #acacac; // disable byproduct-title
 $blue: #0096df;
 $darkred: #df0000; // → Applied as border color with bulma's '$red' (is-danger)
 $gold: #ffbd00;    // → Applied as border color with bulma's '$yellow' (is-warning)
